src/project/manifest/snapshots/pixi__project__manifest__tests__add_channels.snap
---
source: src/project/manifest/mod.rs
expression: manifest.document.to_string()
---

[project]
name = "foo"
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[dependencies]

[feature.test]
channels = ["test", "test2"]

[feature.test.dependencies]

[feature.cuda]
channels = ["nvidia"]
        
